--- a/index.html
+++ b/index.html
@@ -717,7 +717,16 @@ body.edit-mode .delete-btn{
   color:var(--text);
 }
 
-    
+/* ✅ 통계 탭 진입 미세 애니메이션 */
+#statsDonutWrap.anim-in,
+#statsTop5.anim-in{
+  animation: statsIn .16s ease-out both;
+}
+
+@keyframes statsIn{
+  from { transform: translateY(6px); opacity: 0; }
+  to   { transform: translateY(0); opacity: 1; }
+}    
     
 
 @keyframes toastIn{
@@ -973,6 +982,19 @@ body.edit-mode .delete-btn{
 
   // ✅ 통계 탭 들어갈 때마다 최신 반영
   if(target === "stats") renderStats();
+
+  // ✅ 통계 탭 진입 시 미세 애니메이션 (0.16s)
+  if(target === "stats"){
+    const a = document.getElementById("statsDonutWrap");
+    const b = document.getElementById("statsTop5");
+
+    [a,b].forEach(el=>{
+      if(!el) return;
+      el.classList.remove("anim-in"); // 리셋
+      void el.offsetWidth;            // reflow 트릭 (다시 애니메이션 실행)
+      el.classList.add("anim-in");
+    });
+  }
 
   // ✅ 월별 탭 처음 눌렀을 때도 리스트+TOP3까지 바로 렌더
   if(target === "monthly"){
