--- a/index.html
+++ b/index.html
@@ -840,6 +840,24 @@ body.edit-mode .delete-btn{
       opacity: .85;
     }
 
+    /* =========================
+   📝 메모 슬라이드 열기 (월별 항목 클릭)
+   ========================= */
+document.getElementById("monthlyList")?.addEventListener("click", (e)=>{
+  const itemEl = e.target.closest(".recent-item");
+  if(!itemEl) return;
+
+  const id = itemEl.dataset.id;
+  if(!id) return;
+
+  const item = loadRecords().find(r => r.id === id);
+  if(!item) return;
+
+  openMemoSlide(item);
+});
+
+    
+
     /* ✅ 월별 필터 UI */
 .filter-row{
   display:flex;
@@ -1681,6 +1699,9 @@ function openMemoSlide(item){
 
   document.body.classList.add("modal-open"); // ✅ 뒤 스크롤 차단
   memoSlide.classList.remove("hidden");
+
+  if(!(item.memo || "").trim()) return; // 메모 없으면 무시
+  
 }
 
     
@@ -1841,7 +1862,7 @@ function renderMonthly(ym){ // ym: "YYYY-MM"
     const amtSideClass = x.type === "income" ? "amt-income" : "amt-expense";
 
     return `
-      <div class="recent-item" style="margin-top:10px;">
+    <div class="recent-item" data-id="${x.id}" style="margin-top:10px;">
         <div class="recent-left">
           <div class="recent-meta">${dateText}</div>
           <div class="recent-title">${x.category || "기타"}</div>
