--- a/index.html
+++ b/index.html
@@ -1909,6 +1909,8 @@ function renderMonthly(ym){ // ym: "YYYY-MM"
           <div class="recent-amt ${amtSideClass}">
             ${fmtKRW(x.amount)}
           </div>
+          <button class="edit-btn" type="button" data-id="${x.id}" aria-label="수정">✏️</button>
+          <button class="delete-btn" type="button" data-id="${x.id}" aria-label="삭제">🗑️</button>
         </div>
       </div>
     `;
@@ -2300,6 +2302,68 @@ document.getElementById("recentList")?.addEventListener("click", (e) => {
 });
 
 
+
+   /* =========================
+   ✏️ 월별 - 수정 버튼
+   ========================= */
+document.getElementById("monthlyList")?.addEventListener("click", (e) => {
+  const btn = e.target.closest(".edit-btn");
+  if(!btn) return;
+
+  e.stopPropagation();
+
+  const id = btn.dataset.id;
+  if(!id) return;
+
+  const item = loadRecords().find(r => r.id === id);
+  if(!item) return;
+
+  fillFormForEdit(item);
+  openModal();
+});
+
+
+
+    /* =========================
+   🗑️ 월별 - 삭제 + Undo
+   ========================= */
+document.getElementById("monthlyList")?.addEventListener("click", (e) => {
+  const del = e.target.closest(".delete-btn");
+  if(!del) return;
+
+  e.stopPropagation();
+
+  const id = del.dataset.id;
+  if(!id) return;
+
+  const list = loadRecords();
+  const idx = list.findIndex(r => r.id === id);
+  if(idx < 0) return;
+
+  if(pendingDelete?.timerId){
+    clearTimeout(pendingDelete.timerId);
+    pendingDelete = null;
+  }
+
+  const removed = list[idx];
+
+  list.splice(idx, 1);
+  localStorage.setItem("records", JSON.stringify(list));
+
+  // ✅ 홈/월별 둘 다 갱신
+  renderRecent();
+  renderMonthly(getCurrentYM());
+
+  pendingDelete = { item: removed, index: idx, timerId: null };
+  showToast("삭제됨", { undo: true });
+
+  pendingDelete.timerId = setTimeout(() => {
+    pendingDelete = null;
+  }, UNDO_DURATION);
+});
+
+    
+
     /* =========================
    📝 메모 슬라이드 열기 (항목 클릭)
    ========================= */
@@ -2643,6 +2707,7 @@ toastUndoBtn?.addEventListener("click", () => {
 
   localStorage.setItem("records", JSON.stringify(list));
   renderRecent();
+  renderMonthly(getCurrentYM());
 
   pendingDelete = null;
 
