--- a/index.html
+++ b/index.html
@@ -867,6 +867,8 @@ body.edit-mode .delete-btn{
    📝 메모 슬라이드 열기 (월별 항목 클릭)
    ========================= */
 document.getElementById("monthlyList")?.addEventListener("click", (e)=>{
+  if(document.body.classList.contains("edit-mode")) return;
+  
   const itemEl = e.target.closest(".recent-item");
   if(!itemEl) return;
 
