--- a/index.html
+++ b/index.html
@@ -1066,6 +1066,8 @@ body.edit-mode .delete-btn{
         </div>
       </div>
 
+      <div id="jsAlive" class="hint"></div>
+
       <div class="card" id="homeRecentCard">
         <h2>최근 내역</h2>
         <div id="recentList"></div>
@@ -1330,6 +1332,8 @@ body.edit-mode .delete-btn{
 
   <script>
 
+document.getElementById("jsAlive").textContent = "JS OK ✅";
+    
   window.addEventListener("error", (e) => {
   console.error("💥 JS Error:", e.message, e.filename, e.lineno, e.colno);
   });
