--- a/index.html
+++ b/index.html
@@ -1057,17 +1057,23 @@ body.edit-mode .delete-btn{
     
     /* ✅ 예산 상태 문구: 위/아래 여백 크게 */
 #budgetStatus{
+  font-size: 12px;
   margin-top: 14px !important;   /* 지금의 2배 느낌 */
-  margin-bottom: 20px !important;
+  margin-bottom: 2px !important;
 }
 
 /* ✅ 예산 안내(로컬 저장) 문구: 글씨 줄이고 살짝 연하게 */
 #budgetCard .hint{
-  font-size: 11px;
+  font-size: 12px;
   line-height: 1.45;
   color: rgba(102,102,102,.85);
+  opacity: .85;
+  letter-spacing: -0.1px;
 }
 
+    #budgetCard .actions{
+  margin-bottom: 3px;
+}
     
 
      /* 탭 페이지 */
