--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,7 @@ body.edit-mode .delete-btn{
   color: var(--muted);
   letter-spacing: -0.2px;
   line-height: 1.35;
+  word-spacing: -1px;
 }
 
 .budget-total{
@@ -1080,6 +1081,7 @@ body.edit-mode .delete-btn{
 .budget-meta-main{
   display: inline;
 }
+
 
 .budget-state{
   display: inline-block;
