--- a/index.html
+++ b/index.html
@@ -2533,14 +2533,14 @@ function renderBudgetRow({ used, budget, metaEl, fillEl }){
   if(p >= 100){
     metaEl.innerHTML =
       `<span class="budget-meta-main">
-        사용 <b class="amt-expense">${fmtKRW(used)}</b> / 예산 ${fmtKRW(budget)} ·
+        <b class="amt-expense">${fmtKRW(used)}</b> / 예산 ${fmtKRW(budget)} ·
         <b class="amt-expense">${fmtKRW(Math.abs(remain))} </b> (${p}%)
       </span>
       ${stateHTML}`;
   } else {
     metaEl.innerHTML =
       `<span class="budget-meta-main">
-        사용 <b>${fmtKRW(used)}</b> / 예산 ${fmtKRW(budget)} ·
+        <b>${fmtKRW(used)}</b> / 예산 ${fmtKRW(budget)} ·
         <b class="amt-income">${fmtKRW(remain)}</b> 남음(${p}%)
       </span>
       ${stateHTML}`;
