--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ body.edit-mode .delete-btn{
 
 .budget-state{
   display: inline-block;
-  margin-left: 8px;
+  margin-left: 0;
   font-weight: 800;
   font-size: 12px;
   letter-spacing: -0.2px;
