--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@ body.edit-mode .delete-btn{
       <div>월별</div>
     </button>
     <button class="tab" data-target="review" role="tab">
-      <div class="icon">🧾</div>
+      <div class="icon">✍️</div>
       <div>정리</div>
     </button>
   </nav>
